# llm-consumer-research

./: .agents.yml  .gitignore  AGENTS.md  Makefile  README.md  cleanup_summary.md  dev.sh  gradio_app.py  main.py  plan.md  pyproject.toml  render.yaml
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml
data/: runs.db
docs/: persona_overview.md
scripts/: build_persona_csv.py  generate_gov_personas.py
src/ssr_service/: __init__.py  anchors.py  api.py  audience_builder.py  cache.py  config.py  db.py  elicitation.py  embedding.py  frontend.py  models.py  orchestrator.py  panel_context.py  persona_generation.py  persona_inputs.py  personas.py  population.py  retrieval.py  sample_data.py  simple_cli.py  simple_interface.py  ssr.py
src/ssr_service/data/anchors/: clarity_en.yml  clarity_th.yml  differentiation_en.yml  differentiation_th.yml  purchase_intent_en.yml  purchase_intent_th.yml  trust_en.yml  trust_th.yml  value_for_money_en.yml  value_for_money_th.yml
src/ssr_service/data/personas/: us_backpack_buyers.yml  us_portable_storage_buyers.yml  us_toothpaste.yml
src/ssr_service/data/samples/: demo_samples.json
src/ssr_service/llm/: anthropic_client.py  base.py  factory.py  gemini_client.py  openai_client.py  perplexity_client.py
tests/: test_api_persona_groups.py  test_audience_builder.py  test_cache.py  test_config.py  test_db.py  test_multi_provider_mock.py  test_orchestrator.py  test_panel_context.py  test_panel_preview.py  test_persona_dynamics.py  test_personas.py  test_simple_interface.py  test_ssr.py
tests_llm_live/: __init__.py  test_golden.py
tests_llm_live/goldens/: example_response.json
web_ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web_ui/src/: App.tsx  api.ts  types.ts
web_ui/src/components/: DashboardView.tsx  WizardView.tsx
