[project]
name = "llm-consumer-research"
version = "0.1.0"
description = "Synthetic consumer research service using LLM semantic similarity rating"
authors = [{name = "Rohit", email = ""}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "openai>=1.40.0",
    "python-dotenv>=1.0",
    "gradio>=4.44.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx[http2]>=0.27",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0"
]
gradio = [
    "gradio>=4.44.0",
    "pandas>=2.0",
    "altair>=5.0"
]

[project.urls]
homepage = "https://example.com"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ssr_service"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict_optional = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "altair",
    "gradio",
    "numpy",
    "pandas",
    "openai",
    "httpx",
    "uvicorn",
    "starlette.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-m 'not llm_live'"
markers = [
    "llm_live: integration tests exercising LLM goldens",
]
