[project]
name = "llm-consumer-research"
version = "0.1.0"
description = "Synthetic consumer research service using LLM semantic similarity rating"
authors = [{name = "Rohit", email = ""}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "openai>=1.40.0",
    "python-dotenv>=1.0",
    "anthropic>=0.3.0",
    "google-generativeai>=0.3.0",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx[http2]>=0.27",
    "ruff>=0.5.0",
    "ty>=0.0.12",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "types-PyYAML>=6.0"
]
gradio = [
    "google-generativeai",
    "anthropic",
]
pdf = [
    "pdfplumber>=0.10",
]

[project.urls]
homepage = "https://example.com"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/ssr_service"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-m 'not llm_live'"
markers = [
    "llm_live: integration tests exercising LLM goldens",
]
